--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -8,6 +8,9 @@ $nav-color: rgb(41, 44, 68);
 $primary-button-color: rgb(255, 83, 73);
 $secondary-button-color: rgb(79, 128, 225);
 
+$primary-button-hover-color: rgba(255, 83, 73, 0.9);
+$secondary-button-hover-color: rgba(79, 128, 225, 0.9);
+
 $primary-text-color: $section-color;
 $secondary-text-color: $primary-button-color;
 
