--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -1,4 +1,9 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans|Roboto');
 @import "~tachyons";
 @import './variables';
 @import './base';
 @import './style';
+
+// Module specific stylesheets
+@import '../../components/App/index';
+@import '../../components/User/index';
