Film: Style film listing

--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -15,3 +15,5 @@ $primary-text-color: $section-color;
 $secondary-text-color: $primary-button-color;
 
 $primary-border-color: rgba(128, 128, 128, 0.15);
+
+$overlay: rgba(41, 44, 68, 0.4);
