Film: Style page titles

--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -11,7 +11,7 @@ $secondary-button-color: rgb(79, 128, 225);
 $primary-button-hover-color: rgba(255, 83, 73, 0.9);
 $secondary-button-hover-color: rgba(79, 128, 225, 0.9);
 
-$primary-text-color: $section-color;
+$primary-text-color: $nav-color;
 $secondary-text-color: $primary-button-color;
 
 $primary-border-color: rgba(128, 128, 128, 0.15);
