--- a/src/assets/styles/_base.scss
+++ b/src/assets/styles/_base.scss
@@ -1,9 +1,11 @@
 body {
   font-family: 'Open Sans', sans-serif;
+  color: $primary-text-color;
 }
 
 button, h1, h2, h3, h4, h5, h6 {
   font-family: 'Roboto', sans-serif;
+  text-transform: uppercase;
 }
 
 .form-field {
