--- a/src/assets/styles/_base.scss
+++ b/src/assets/styles/_base.scss
@@ -3,6 +3,13 @@ body {
   color: $primary-text-color;
 }
 
+header {
+  box-shadow: $tiny-shadow;
+  position: fixed;
+  width: 100%;
+  z-index: 9999;
+}
+
 button, h1, h2, h3, h4, h5, h6 {
   font-family: 'Roboto', sans-serif;
   text-transform: uppercase;
