Film: Style add new link

--- a/src/assets/styles/_base.scss
+++ b/src/assets/styles/_base.scss
@@ -15,6 +15,19 @@ button, h1, h2, h3, h4, h5, h6 {
   text-transform: uppercase;
 }
 
+a,
+a:active,
+a:focus {
+  color: initial;
+}
+
+a,
+a:active,
+a:hover,
+a:focus {
+  text-decoration: none;
+}
+
 .form-field {
   margin-bottom: 2.5rem;
   text-align: left;
