--- a/src/components/Film/index.scss
+++ b/src/components/Film/index.scss
@@ -25,6 +25,38 @@ li.film-list-item .image:after {
   background: $overlay;
 }
 
+.image {
+  color: #fff;
+}
+
 .add-film-btn {
   color: $primary-button-color;
+}
+
+.film-details-wrapper .image h1,
+.film-details-wrapper .image p,
+.film-details-wrapper .image a {
+  position: relative;
+  z-index: 9999;
+  color: #fff;
+}
+
+.film-details-wrapper .image {
+  background-position: center;
+  background-size: cover;
+  height: 20rem;
+}
+
+.film-details-wrapper .image:before {
+  content: '';
+  position: absolute;
+  width: inherit;
+  height: inherit;
+  top: 3rem;
+  left: 0;
+  background: $overlay;
+}
+
+.summary {
+  min-height: 50vh;
 }
